Fixed triple dot drop-down menu alignment

--- a/public/styles/custom.css
+++ b/public/styles/custom.css
@@ -94,3 +94,8 @@ img.container{
 	height:auto;
 	margin: auto;
 }
+
+iron-dropdown#dropdown{
+	top:12px;
+	right:16px;
+}
